--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@fullcalendar/angular": "^5.9.0",
     "@fullcalendar/daygrid": "^5.9.0",
     "@fullcalendar/interaction": "^5.9.0",
+    "@fullcalendar/list": "^5.9.0",
+    "@fullcalendar/timegrid": "^5.9.0",
     "bootstrap": "^5.1.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
